modules.F90

!     MODULE FTEIK_CONSTANTS64F
!        USE ISO_C_BINDING
!        IMPLICIT NONE
!        REAL(C_DOUBLE), PARAMETER :: FTEIK_HUGE = 99999.d0
!        REAL(C_DOUBLE), PARAMETER :: zero = 0.d0
!        REAL(C_DOUBLE), PARAMETER :: one = 1.d0
!        REAL(C_DOUBLE), PARAMETER :: DBL_EPSILON = EPSILON(1.d0)
!        REAL(C_DOUBLE), PARAMETER :: perturbSource = 0.0001d0
!        INTEGER(C_INT), PARAMETER :: chunkSize = 16
!     END MODULE !FTEIK_CONSTANTS64F
!                                                                                        !
!========================================================================================!
!                                                                                        !
!     MODULE FTEIK_MODEL64F
!        USE ISO_C_BINDING
!        USE FTEIK_CONSTANTS64F, ONLY : zero 
!        IMPLICIT NONE
!        REAL(C_DOUBLE), ALLOCATABLE, SAVE :: slow(:) !> Slowness model (seconds/meters)
!        !DIR$ ATTRIBUTES ALIGN: 64 :: slow
!        REAL(C_DOUBLE), SAVE :: dx = zero     !> x origin (meters)
!        REAL(C_DOUBLE), SAVE :: dy = zero     !> y origin (meters)
!        REAL(C_DOUBLE), SAVE :: dz = zero     !> z origin (meters)
!        REAL(C_DOUBLE), SAVE :: x0 = zero     !> x origin (meters)
!        REAL(C_DOUBLE), SAVE :: y0 = zero     !> y origin (meters)
!        REAL(C_DOUBLE), SAVE :: z0 = zero     !> z origin (meters)
!        INTEGER(C_INT), SAVE :: ncell =-1     !> Number of cells in slowness model
!        INTEGER(C_INT), SAVE :: ngrd =-1      !> Number of grid points (= nz*nx*ny)
!        INTEGER(C_INT), SAVE :: nx =-1        !> Number of x grid points in travel time field
!        INTEGER(C_INT), SAVE :: ny =-1        !> Number of y grid points in travel time field
!        INTEGER(C_INT), SAVE :: nz =-1        !> Number of z grid points in travel time field
!        INTEGER(C_INT), SAVE:: nzx =-1       !> nz*nx
!        INTEGER(C_INT), SAVE :: nzm1_nxm1 =-1 !> (nz - 1)*(nx - 1)
!        INTEGER(C_INT), SAVE :: nzm1 =-1      !> (nz - 1)
!        LOGICAL(C_BOOL), SAVE :: lhaveModel = .FALSE. !> If true slowness model was set

!        INTERFACE

!           SUBROUTINE fteik_model_finalizeF()             &
!                      BIND(C, NAME='fteik_model_finalizeF')
!           USE ISO_C_BINDING
!           END SUBROUTINE

!           SUBROUTINE fteik_model_getVelocityModel64fF(nwork, nv, vel, ierr) &
!                      BIND(C, NAME='fteik_model_getVelocityModel64fF')
!           USE ISO_C_BINDING
!           IMPLICIT NONE 
!           INTEGER(C_INT), VALUE, INTENT(IN) :: nwork
!           REAL(C_DOUBLE), INTENT(OUT) :: vel(nwork)
!           INTEGER(C_INT), INTENT(OUT) :: nv, ierr
!           END SUBROUTINE

!           SUBROUTINE fteik_model_intializeGeometryF(nz, nx, ny,    &
!                                                     dz, dx, dy,    &
!                                                     z0, x0, y0,    &
!                                                     ierr)          &
!                      BIND(C, NAME='fteik_model_initializeGeometryF')
!           USE ISO_C_BINDING
!           INTEGER(C_INT), VALUE, INTENT(IN) :: nz, nx, ny
!           REAL(C_DOUBLE), VALUE, INTENT(IN) :: dz, dx, dy, z0, x0, y0
!           END SUBROUTINE

!           SUBROUTINE fteik_model_setGridSizeF(nzIn, nxIn, nyIn, ierr) &
!                      BIND(C, NAME='fteik_model_setGridSizeF')
!           USE ISO_C_BINDING
!           IMPLICIT NONE
!           INTEGER(C_INT), VALUE, INTENT(IN) :: nzIn, nxIn, nyIn
!           INTEGER(C_INT), INTENT(OUT) :: ierr
!           END SUBROUTINE

!           SUBROUTINE fteik_model_setOriginF(z0In, x0In, y0In) &
!                      BIND(C, NAME='fteik_model_setOriginF')
!           USE ISO_C_BINDING
!           REAL(C_DOUBLE), VALUE, INTENT(IN) :: x0In, y0In, z0In 
!           END SUBROUTINE

!           SUBROUTINE fteik_model_setGridSpacingF(dzIn, dxIn, dyIn, ierr) &
!                      BIND(C, NAME='fteik_model_setGridSpacingF')
!           USE ISO_C_BINDING
!           IMPLICIT NONE
!           REAL(C_DOUBLE), VALUE, INTENT(IN) :: dzIn, dxIn, dyIn
!           INTEGER(C_INT), INTENT(OUT) :: ierr
!           END SUBROUTINE

!           SUBROUTINE fteik_model_setVelocityModel64fF(nv, vel, ierr) &
!                      BIND(C, NAME='fteik_model_setVelocityModel64fF')
!           USE ISO_C_BINDING
!           IMPLICIT NONE
!           INTEGER(C_INT), VALUE, INTENT(IN) :: nv
!           REAL(C_DOUBLE), INTENT(IN) :: vel(nv)
!           INTEGER(C_INT), INTENT(OUT) :: ierr
!           END SUBROUTINE

!           SUBROUTINE fteik_model_setVelocityModel32fF(nv, vel4, ierr) &
!                      BIND(C, NAME='fteik_model_setVelocityModel32fF')
!           USE ISO_C_BINDING
!           IMPLICIT NONE
!           INTEGER(C_INT), VALUE, INTENT(IN) :: nv
!           REAL(C_FLOAT), INTENT(IN) :: vel4(nv)
!           INTEGER(C_INT), INTENT(OUT) :: ierr
!           END SUBROUTINE

!           PURE INTEGER(C_INT) FUNCTION fteik_model_velGrid2indexF(i, j, k,        &
!                                                                nzm1, nzm1_nxm1)   &
!                            BIND(C, NAME='fteik_model_velGrid2indexF')             &
!                            RESULT(velGrid2IndexF)
!           !$OMP DECLARE SIMD(fteik_model_velGrid2indexF) UNIFORM(nzm1, nzm1_nxm1)
!           USE ISO_C_BINDING
!           IMPLICIT NONE 
!           INTEGER(C_INT), INTENT(IN), VALUE :: i, j, k, nzm1, nzm1_nxm1
!           END FUNCTION

!           PURE SUBROUTINE fteik_model_index2gridF(igrd, i, j, k, ierr) &
!                           BIND(C, NAME='fteik_model_index2gridF')
!           !$OMP DECLARE SIMD(fteik_model_index2gridF) UNIFORM(ierr)
!           USE ISO_C_BINDING
!           INTEGER(C_INT), INTENT(IN), VALUE :: igrd
!           INTEGER(C_INT), INTENT(OUT) :: i, j, k, ierr
!           END SUBROUTINE

!           PURE INTEGER(C_INT) FUNCTION fteik_model_grid2indexF(i, j, k, nz, nzx) &
!                               BIND(C, NAME='fteik_model_grid2indexF')            &
!                               RESULT(grid2indexF)
!           !$OMP DECLARE SIMD(fteik_model_grid2indexF) UNIFORM(nz, nzx)
!           USE ISO_C_BINDING
!           IMPLICIT NONE
!           INTEGER(C_INT), INTENT(IN), VALUE :: i, j, k, nz, nzx
!           END FUNCTION

!        END INTERFACE
!     END MODULE !FTEIK_MODEL64F
!                                                                                        !
!========================================================================================!
!                                                                                        !
!     MODULE FTEIK_RECEIVER64F
!        USE ISO_C_BINDING
!        ! receiver indices
!        REAL(C_DOUBLE), ALLOCATABLE, SAVE :: zdr(:), xdr(:), ydr(:)
!        INTEGER(C_INT), ALLOCATABLE, SAVE :: zri(:), xri(:), yri(:)
!        INTEGER(C_INT), SAVE :: nrec 
!        INTEGER(C_INT), PARAMETER :: INTERP_NEAREST = 0
!        INTEGER(C_INT), PARAMETER :: INTERP_LINEAR = 1
!        INTEGER(C_INT), PARAMETER :: INTERP_HIGHACCURACY = 2
!        INTERFACE
!           SUBROUTINE fteik_receiver_initialize64fF(nrecIn, z, x, y, ierr) &
!           BIND(C, NAME='fteik_receiver_initialize64fF')
!           USE ISO_C_BINDING
!           IMPLICIT NONE 
!           INTEGER(C_INT), INTENT(IN), VALUE :: nrecIn
!           REAL(C_DOUBLE), INTENT(IN) :: z(nrecIn), x(nrecIn), y(nrecIn)
!           INTEGER(C_INT), INTENT(OUT) :: ierr 
!           END SUBROUTINE

!           SUBROUTINE fteik_receiver_getTravelTimes64fF(nrecIn, ttr, ierr) &
!           BIND(C, NAME='fteik_receiver_getTravelTimes64fF')
!           USE ISO_C_BINDING
!           IMPLICIT NONE 
!           INTEGER(C_INT), VALUE, INTENT(IN) :: nrecIn
!           REAL(C_DOUBLE), INTENT(OUT) :: ttr(nrecIn)
!           INTEGER(C_INT), INTENT(OUT) :: ierr 
!           END SUBROUTINE

!           SUBROUTINE fteik_receiver_finalizeF() &
!           BIND(C, NAME='fteik_receiver_finalizeF')
!           USE ISO_C_BINDING
!           IMPLICIT NONE 
!           END SUBROUTINE
!        END INTERFACE
!     END MODULE FTEIK_RECEIVER64F
!                                                                                        !
!========================================================================================!
!                                                                                        !
!     MODULE FTEIK_SOURCE64F
!        USE ISO_C_BINDING
!        IMPLICIT NONE
!        REAL(C_DOUBLE), ALLOCATABLE, SAVE :: zsv(:), xsv(:), ysv(:),    &
!                                             zsav(:), xsav(:), ysav(:), &
!                                             zsrc(:), xsrc(:), ysrc(:)
!        INTEGER(C_INT), ALLOCATABLE, SAVE :: zsiv(:), xsiv(:), ysiv(:)
!        !DIR$ ATTRIBUTES ALIGN: 64 :: zsv, xsv, ysv, zsav, xsav, ysav
!        !DIR$ ATTRIBUTES ALIGN: 64 :: zsrc, xsrc, ysrc, zsiv, xsiv, ysiv
!        INTEGER(C_INT), SAVE :: nsrc = 0
!        LOGICAL(C_BOOL), SAVE :: lhaveSource = .FALSE.

!        INTERFACE

!           SUBROUTINE fteik_source_finalizeF()             &
!                      BIND(C, NAME='fteik_source_finalizeF')
!           USE ISO_C_BINDING
!           IMPLICIT NONE
!           END SUBROUTINE

!           SUBROUTINE fteik_source_initialize64fF(nsrcIn, zsrcIn, xsrcIn, ysrcIn, ierr) &
!                      BIND(C, NAME='fteik_source_initialize64fF')
!           USE ISO_C_BINDING
!           IMPLICIT NONE
!           INTEGER(C_INT), VALUE, INTENT(IN) :: nsrcIn
!           REAL(C_DOUBLE), INTENT(IN) :: zsrcIn(nsrcIn), xsrcIn(nsrcIn), ysrcIn(nsrcIn)
!           INTEGER(C_INT), INTENT(OUT) :: ierr
!           END SUBROUTINE

!           SUBROUTINE fteik_source_getSolverInfo64fF(isrc,          &
!                                                     zsi, xsi, ysi, &
!                                                     zsa, xsa, ysa, &
!                                                     szero, szero2, &
!                                                     ierr)          &
!                      BIND(C, NAME='fteik_source_getSolverInfo64fF')
!           USE ISO_C_BINDING
!           IMPLICIT NONE
!           INTEGER(C_INT), VALUE, INTENT(IN) :: isrc
!           REAL(C_DOUBLE), INTENT(OUT) :: zsa, xsa, ysa, szero, szero2
!           INTEGER(C_INT), INTENT(OUT) :: zsi, xsi, ysi, ierr
!           END SUBROUTINE

!           SUBROUTINE fteik_source_getSourceIndices64fF(isrc, zsa, xsa, ysa, ierr) &
!                      BIND(C, NAME='fteik_source_getSourceIndices64fF')
!           USE ISO_C_BINDING
!           IMPLICIT NONE
!           INTEGER(C_INT), VALUE, INTENT(IN) :: isrc
!           REAL(C_DOUBLE), INTENT(OUT) :: zsa, xsa, ysa
!           INTEGER(C_INT), INTENT(OUT) :: ierr
!           END SUBROUTINE

!           SUBROUTINE fteik_source_getSourceIndices32iF(isrc, zsi, xsi, ysi, ierr) &
!                      BIND(C, NAME='fteik_source_getSourceIndices32iF')
!           USE ISO_C_BINDING
!           IMPLICIT NONE
!           INTEGER(C_INT), VALUE, INTENT(IN) :: isrc
!           INTEGER(C_INT), INTENT(OUT) :: zsi, xsi, ysi, ierr
!           END SUBROUTINE

!           SUBROUTINE fteik_source_getSzero64fF(isrc, szero, szero2, ierr)   &
!                      BIND(C, NAME='fteik_source_getSzero64fF')
!           USE ISO_C_BINDING
!           IMPLICIT NONE
!           INTEGER(C_INT), VALUE, INTENT(IN) :: isrc
!           REAL(C_DOUBLE), INTENT(OUT) :: szero, szero2
!           INTEGER(C_INT), INTENT(OUT) :: ierr
!           END SUBROUTINE
